--- a/public/project-next/client/css/style.css
+++ b/public/project-next/client/css/style.css
@@ -270,6 +270,11 @@ footer {
     margin-top: 36px;
 }
 
+.follow-container{
+    margin-bottom: 7px;
+    margin-top: 5px;
+}
+
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
