--- a/public/project-next/client/views/users/followers.view.html
+++ b/public/project-next/client/views/users/followers.view.html
@@ -22,11 +22,11 @@
     </div>
     <!-- /#sidebar-wrapper -->
 
-    <button ng-click="followersControllerModel.toggleMenu()"
-            class="btn btn-default"
-            id="menu-toggle">
-        <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
-    </button>
+    <!--<button ng-click="followersControllerModel.toggleMenu()"-->
+            <!--class="btn btn-default"-->
+            <!--id="menu-toggle">-->
+        <!--<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>-->
+    <!--</button>-->
     <!-- Page Content -->
     <div id="page-content-wrapper">
         <h1>Followers</h1>
