--- a/public/project-next/client/views/users/profile.view.html
+++ b/public/project-next/client/views/users/profile.view.html
@@ -23,14 +23,28 @@
     </div>
     <!-- /#sidebar-wrapper -->
 
-    <button ng-click="profileControllerModel.toggleMenu()"
-            class="btn btn-default"
-            id="menu-toggle">
-        <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
-    </button>
+    <!--<button ng-click="profileControllerModel.toggleMenu()"-->
+            <!--class="btn btn-default"-->
+            <!--id="menu-toggle">-->
+        <!--<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>-->
+    <!--</button>-->
     <!-- Page Content -->
     <div id="page-content-wrapper">
-        <h1>Edit Profile</h1>
+        <div class="row">
+            <div class="col-xs-6">
+                <h2>Edit Profile</h2>
+            </div>
+            <div class="col-xs-3 text-center">
+                <a href="#/{{profileControllerModel.userId}}/profile/followers">
+                    <p class="lead follow-container">Follower</p></a>
+                <span>{{profileControllerModel.profileUser.followers.length}}</span>
+            </div>
+            <div class="col-xs-3 text-center">
+                <a href="#/{{profileControllerModel.userId}}/profile/following">
+                    <p class="lead follow-container">Following</p></a>
+                <span>{{profileControllerModel.profileUser.following.length}}</span>
+            </div>
+        </div>
         <hr>
         <div class="col-xs-12">
             <div class="row">
@@ -39,25 +53,16 @@
                     <div class="text-center">
                         <img ng-src="{{profileControllerModel.currentUser.imgUrl}}"
                              height="200" width="200"
-                             class="avatar img-circle"alt="avatar">
-                        <!--<h6>Upload a different photo.</h6>-->
-                        <!--<a ng-hide="profileControllerModel.isfollowed" href=""-->
-                           <!--ng-click="profileControllerModel.followUser(profileControllerModel.userId)">-->
-                            <!--<i title="Follow" class="fa fa-user-plus fa-lg"></i>-->
-                        <!--</a>-->
-                        <!--<a ng-if="profileControllerModel.isfollowed" href=""-->
-                           <!--ng-click="profileControllerModel.unFollowUser(profileControllerModel.userId)">-->
-                            <!--<i title="UnFollow" class="fa fa-user-plus fa-lg orangecolor"></i>-->
-                        <!--</a>-->
+                             class="avatar img-circle">
                     </div>
                 </div>
                 <!-- edit form column -->
                 <div class="col-md-9 personal-info">
-                    <div class="alert alert-info alert-dismissable">
-                        <a class="panel-close close" data-dismiss="alert">×</a>
-                        <i class="fa fa-coffee"></i>
-                        This is an <strong>.alert</strong>. Use this to show important messages to the user.
-                    </div>
+                    <!--<div class="alert alert-info alert-dismissable">-->
+                        <!--<a class="panel-close close" data-dismiss="alert">×</a>-->
+                        <!--<i class="fa fa-coffee"></i>-->
+                        <!--This is an <strong>.alert</strong>. Use this to show important messages to the user.-->
+                    <!--</div>-->
                     <h3>Personal info</h3>
 
                     <form action="{{profileControllerModel.updateProfile}}" class="form-horizontal"
