--- a/public/project-next/client/views/users/reviews.view.html
+++ b/public/project-next/client/views/users/reviews.view.html
@@ -22,9 +22,9 @@
     </div>
     <!-- /#sidebar-wrapper -->
 
-    <button ng-click="reviewsControllerModel.toggleMenu()" class="btn btn-default" id="menu-toggle">
-        <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
-    </button>
+    <!--<button ng-click="reviewsControllerModel.toggleMenu()" class="btn btn-default" id="menu-toggle">-->
+        <!--<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>-->
+    <!--</button>-->
     <!-- Page Content -->
     <div id="page-content-wrapper">
         <h1>Reviews</h1>
