--- a/public/project-next/client/views/users/followers.view.html
+++ b/public/project-next/client/views/users/followers.view.html
@@ -7,7 +7,7 @@
                     {{followersControllerModel.profileUser.username}} Profile</a>
             </li>
             <li>
-                <a href="#/{{followersControllerModel.userId}}/profile/reviews">Overview</a>
+                <a href="#/{{followersControllerModel.userId}}/profile/reviews">Reviews</a>
             </li>
             <li>
                 <a href="#/{{followersControllerModel.userId}}/profile/likes">Likes</a>
