--- a/public/project-next/client/views/users/profile.view.html
+++ b/public/project-next/client/views/users/profile.view.html
@@ -63,7 +63,15 @@
                         <!--<i class="fa fa-coffee"></i>-->
                         <!--This is an <strong>.alert</strong>. Use this to show important messages to the user.-->
                     <!--</div>-->
-                    <h3>Personal info</h3>
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <h3>Personal Info</h3>
+                        </div>
+                        <div class="col-xs-6 text-right">
+                            <p class="lead margin-as-h3">Update Profile</p>
+                        </div>
+                    </div>
+
 
                     <form action="{{profileControllerModel.updateProfile}}" class="form-horizontal"
                           role="form" method="post" enctype="multipart/form-data">
