Added profile of userid in reviews page

--- a/public/project-next/client/views/users/following.view.html
+++ b/public/project-next/client/views/users/following.view.html
@@ -7,7 +7,7 @@
                     {{followingControllerModel.profileUser.username}} Profile</a>
             </li>
             <li>
-                <a href="#/{{followingControllerModel.userId}}/profile/reviews">Overview</a>
+                <a href="#/{{followingControllerModel.userId}}/profile/reviews">Reviews</a>
             </li>
             <li>
                 <a href="#/{{followingControllerModel.userId}}/profile/likes">Likes</a>
