--- a/public/project-next/client/css/style.css
+++ b/public/project-next/client/css/style.css
@@ -284,6 +284,10 @@ footer {
     white-space: nowrap;
 }
 
+.mar-user-top{
+    margin-top: 10px;
+}
+
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
