--- a/public/project-next/client/views/users/profile.view.html
+++ b/public/project-next/client/views/users/profile.view.html
@@ -67,9 +67,9 @@
                         <div class="col-xs-6">
                             <h3>Personal Info</h3>
                         </div>
-                        <div class="col-xs-6 text-right">
-                            <p class="lead margin-as-h3">Update Profile</p>
-                        </div>
+                        <!--<div class="col-xs-6 text-right">-->
+                            <!--<p class="lead margin-as-h3">Update Profile</p>-->
+                        <!--</div>-->
                     </div>
 
 
