--- a/public/project-next/client/views/users/following.view.html
+++ b/public/project-next/client/views/users/following.view.html
@@ -59,7 +59,7 @@
                     </a>
                     <div class="media-body">
                         <h4 class="media-heading">
-                            <a href="#/{{following._id}}/view/profile">
+                            <a href="#/{{following._id}}/profile/reviews">
                                 <p>{{following.firstName}}&nbsp{{following.lastName}}</p>
                             </a>
                         </h4>
