--- a/public/project-next/client/views/users/following.view.html
+++ b/public/project-next/client/views/users/following.view.html
@@ -3,7 +3,10 @@
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <li class="sidebar-brand">
-                <a href="#/{{followingControllerModel.userId}}/profile">
+                <a ng-if="followingControllerModel.currentUser._id != followingControllerModel.profileUser._id">
+                    {{followingControllerModel.profileUser.username}} Profile</a>
+                <a ng-if="followingControllerModel.currentUser._id == followingControllerModel.profileUser._id"
+                   href="#/{{followingControllerModel.userId}}/profile">
                     {{followingControllerModel.profileUser.username}} Profile</a>
             </li>
             <li>
@@ -29,7 +32,49 @@
     <!--</button>-->
     <!-- Page Content -->
     <div id="page-content-wrapper">
-        <h1>Following</h1>
+        <!--<h1>Following</h1>-->
+        <div class="row">
+            <div class="col-xs-6">
+                <h1>Following</h1>
+            </div>
+            <div ng-if="followingControllerModel.currentUser._id != followingControllerModel.profileUser._id">
+                <div class="col-xs-3 img-center col-sm-2 text-center">
+                    <img src="//placehold.it/100" class="avatar img-circle hidden-sm hidden-xs" alt="avatar">
+                    <img src="//placehold.it/80" class="avatar img-circle visible-sm" alt="avatar">
+                    <img src="//placehold.it/70" class="avatar img-circle visible-xs" alt="avatar">
+                </div>
+                <div class="col-xs-3">
+                    <div class="row mar-user-top hidden-xs hidden-sm">
+                        <p class="lead">User:{{followingControllerModel.profileUser.username }}</p>
+                    </div>
+                    <div class="row visible-xs visible-sm">
+                        <p class="lead">User:{{followingControllerModel.profileUser.username }}</p>
+                    </div>
+                    <div class="row">
+                        <div class="hidden-xs">
+                            <a ng-hide="followingControllerModel.isfollowed" href=""
+                               class="btn btn-sm btn-default text-center"
+                               ng-click="followingControllerModel.followUser1(followingControllerModel.userId)">Follow
+                            </a>
+                            <a ng-if="followingControllerModel.isfollowed" href=""
+                               class="btn btn-sm btn-warning"
+                               ng-click="followingControllerModel.unFollowUser1(followingControllerModel.userId)">UnFollow
+                            </a>
+                        </div>
+                        <div class="visible-xs">
+                            <a ng-hide="followingControllerModel.isfollowed" href=""
+                               class="btn btn-xs btn-default text-center"
+                               ng-click="followingControllerModel.followUser1(followingControllerModel.userId)">Follow
+                            </a>
+                            <a ng-if="followingControllerModel.isfollowed" href=""
+                               class="btn btn-xs btn-warning"
+                               ng-click="followingControllerModel.unFollowUser1(followingControllerModel.userId)">UnFollow
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <hr>
         <div class="col-xs-12">
             <div class="row" ng-repeat="following in followingControllerModel.following">
