--- a/public/project-next/client/views/users/likes.view.html
+++ b/public/project-next/client/views/users/likes.view.html
@@ -3,7 +3,10 @@
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <li class="sidebar-brand">
-                <a href="#/{{likeControllerModel.userId}}/profile">
+                <a ng-if="likeControllerModel.currentUser._id != likeControllerModel.profileUser._id">
+                    {{likeControllerModel.profileUser.username}} Profile</a>
+                <a ng-if="likeControllerModel.currentUser._id == likeControllerModel.profileUser._id"
+                   href="#/{{likeControllerModel.userId}}/profile">
                     {{likeControllerModel.profileUser.username}} Profile</a>
             </li>
             <li>
@@ -23,34 +26,76 @@
     <!-- /#sidebar-wrapper -->
 
     <!--<button ng-click="likeControllerModel.toggleMenu()"-->
-            <!--class="btn btn-default"-->
-            <!--id="menu-toggle">-->
-        <!--<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>-->
+    <!--class="btn btn-default"-->
+    <!--id="menu-toggle">-->
+    <!--<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>-->
     <!--</button>-->
     <!-- Page Content -->
     <div id="page-content-wrapper">
-        <h1>Liked Restaurants</h1>
+        <!--<h1>Liked Restaurants</h1>-->
+        <div class="row">
+            <div class="col-xs-6">
+                <h1>Likes</h1>
+            </div>
+            <div ng-if="likeControllerModel.currentUser._id != likeControllerModel.profileUser._id">
+                <div class="col-xs-3 img-center col-sm-2 text-center">
+                    <img src="//placehold.it/100" class="avatar img-circle hidden-sm hidden-xs" alt="avatar">
+                    <img src="//placehold.it/80" class="avatar img-circle visible-sm" alt="avatar">
+                    <img src="//placehold.it/70" class="avatar img-circle visible-xs" alt="avatar">
+                </div>
+                <div class="col-xs-3">
+                    <div class="row mar-user-top hidden-xs hidden-sm">
+                        <p class="lead">User:{{likeControllerModel.profileUser.username }}</p>
+                    </div>
+                    <div class="row visible-xs visible-sm">
+                        <p class="lead">User:{{likeControllerModel.profileUser.username }}</p>
+                    </div>
+                    <div class="row">
+                        <div class="hidden-xs">
+                            <a ng-hide="likeControllerModel.isfollowed" href=""
+                               class="btn btn-sm btn-default text-center"
+                               ng-click="likeControllerModel.followUser(likeControllerModel.userId)">Follow
+                            </a>
+                            <a ng-if="likeControllerModel.isfollowed" href=""
+                               class="btn btn-sm btn-warning"
+                               ng-click="likeControllerModel.unFollowUser(likeControllerModel.userId)">UnFollow
+                            </a>
+                        </div>
+                        <div class="visible-xs">
+                            <a ng-hide="likeControllerModel.isfollowed" href=""
+                               class="btn btn-xs btn-default text-center"
+                               ng-click="likeControllerModel.followUser(likeControllerModel.userId)">Follow
+                            </a>
+                            <a ng-if="likeControllerModel.isfollowed" href=""
+                               class="btn btn-xs btn-warning"
+                               ng-click="likeControllerModel.unFollowUser(likeControllerModel.userId)">UnFollow
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <hr>
         <div class="col-xs-12">
             <div class="row">
                 <!--<div class="col-sm-3">-->
-                    <!--<div class="text-center">-->
-                        <!--<img ng-src="{{rest.imageUrl}}" class="img-responsive" alt="restaurant"/>-->
-                    <!--</div>-->
-                    <!--<hr>-->
+                <!--<div class="text-center">-->
+                <!--<img ng-src="{{rest.imageUrl}}" class="img-responsive" alt="restaurant"/>-->
+                <!--</div>-->
+                <!--<hr>-->
                 <!--</div>-->
                 <!--<div class="col-sm-9">-->
-                    <!--<p class="lead"><a href="#/detail/{{rest._id}}">{{rest.name}}</a></p>-->
-                    <!--<div class="row">-->
-                        <!--<div class="col-xs-8">-->
-                            <!--<a ng-hide="rest.isLiked" href=""-->
-                               <!--ng-click="likeControllerModel.likeRest(rest)">-->
-                                <!--<i title="Like" class="fa fa-thumbs-o-up fa-lg"></i></a>-->
-                            <!--<a ng-if="rest.isLiked" href=""-->
-                               <!--ng-click="likeControllerModel.undolikeRest(rest)">-->
-                                <!--<i title="Unlike" class="fa fa-thumbs-o-up fa-lg orangecolor"></i></a>-->
-                        <!--</div>-->
-                    <!--</div>-->
+                <!--<p class="lead"><a href="#/detail/{{rest._id}}">{{rest.name}}</a></p>-->
+                <!--<div class="row">-->
+                <!--<div class="col-xs-8">-->
+                <!--<a ng-hide="rest.isLiked" href=""-->
+                <!--ng-click="likeControllerModel.likeRest(rest)">-->
+                <!--<i title="Like" class="fa fa-thumbs-o-up fa-lg"></i></a>-->
+                <!--<a ng-if="rest.isLiked" href=""-->
+                <!--ng-click="likeControllerModel.undolikeRest(rest)">-->
+                <!--<i title="Unlike" class="fa fa-thumbs-o-up fa-lg orangecolor"></i></a>-->
+                <!--</div>-->
+                <!--</div>-->
                 <!--</div>-->
                 <div class="col-sm-6 col-md-4 rest-container" ng-repeat="rest in likeControllerModel.restaurants">
                     <div class="thumbnail">
