--- a/public/project-next/client/views/users/reviews.view.html
+++ b/public/project-next/client/views/users/reviews.view.html
@@ -92,7 +92,7 @@
                     <p class="lead">{{review.title}}</p>
                     <p>{{review.review}}</p>
                     <div class="row">
-                        <div class="col-xs-8">
+                        <div class="col-xs-8 nowrap">
                             <p>
                                 <ng-rating ng-model="review.rating"
                                            editable="false">
