--- a/public/project-next/client/views/users/following.view.html
+++ b/public/project-next/client/views/users/following.view.html
@@ -77,6 +77,11 @@
         </div>
         <hr>
         <div class="col-xs-12">
+            <div ng-if="followingControllerModel.noFollowing"
+                 role="alert"
+                 class="alert alert-warning">
+                <strong>Not following anyone!</strong> Start following people and be connected!
+            </div>
             <div class="row" ng-repeat="following in followingControllerModel.following">
                 <!--<div class="col-sm-3">-->
                     <!--<p><img src="//placehold.it/100" class="avatar img-circle" alt="avatar"></p>-->
