--- a/public/project-next/client/views/search/searchresult.view.html
+++ b/public/project-next/client/views/search/searchresult.view.html
@@ -17,7 +17,7 @@
                 aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
-        <strong>No Results!</strong> Try changing food or restaurant name!.
+        <strong>No Results!</strong> Try changing food or restaurant name!
     </div>
     <div class="row">
             <div class="col-sm-6" ng-repeat="rest in data.businesses|limitTo:endIndex |limitTo:startIndex">
